Sun Aug 5 19:21:02 EDT 2007 J Phelps <godless@users.sf.net>
	* loader_libaudiofile.cpp, loader_libaudiofile.h:
	New loaders added. Currently empty.
	* : SCons scripts adjusted to detect libaudiofile
	<default GCC search path only> and to compile the
	libaudiofile loader only if libaudiofile is found.
Sun Aug 5 18:09:37 EDT 2007 J Phelps <godless@users.sf.net>
	* file_format_manager.h, Error.h: Moved definitions of
	File_Error and File_Corrupt from the former to the latter.
	* file_format_manager.cpp: #included Error.h to allow
	code in this file to catch the File_Corrupt and File_Error
	exceptions.
	* Error.h: Fixed a bug in the THROWF macro: The exception
	was declared, set up, but not actually thrown!
Sun Aug 5 17:47:10 EDT 2007 J Phelps <godless@users.sf.net>
	* Error.h: New macro THROWF makes it easier to throw
	Error exceptions with eprintf'd error messages. It
	uses the GNU implementation of variadic macros rather
	than C99 variadic macros.
	* file_format_manager.h: New Error exception types File_Error
	and File_Corrupt.
	* file_reader.h: Added a new method get_filename(), which
	returns the internally-held filename string for use in error
	messages.
	* loader_wav.cpp: Throws an exception if an error occurs,
	to prevent an infinite loop.

Sun Aug 5 05:37:54 EDT 2007 J Phelps <godless@users.sf.net>
	* editor_selection.cpp: Changed the '<' operators in
	for-loops in this file back to <=, which they were
	previously, to correct a bug with selections in the
	Pattern Editor.

Sat Aug 4 21:01:54 EDT 2007 J Phelps <godless@users.sf.net>
	* player_rt_keyboard.cpp
	(find_empty_channel,find_note_in_channel,instrument_stop_all):
	Reversed the order of "for" loops here, so that notes played
	with the "live" keyboard occupy the last channels, instead of
	the first. This way, the live keyboard does not get trampled on
	by the notes in a song, therefore making it possible to play
	the live keyboard alongside a song.
