@@ -86,6 +86,8 @@ env.Append(CXXFLAGS=['-DBITS_PER_BYTE='+
 if (env.detect.need_gmp):
 	env.Append(CXXFLAGS=['-DNEED_GMP']);
 	env.Append(LIBS=['-lgmp']);
+if (env.detect.have_libaudiofile):
+	env.Append(LIBS=['-laudiofile']);
 if (env.detect.need_limit_macros_define) :
 	env.Append(CXXFLAGS=['-D__STDC_LIMIT_MACROS']);
 if (env.detect.have_gnu_basename) :
